--- a/www/templates/tab-rate.html
+++ b/www/templates/tab-rate.html
@@ -1,5 +1,12 @@
 <ion-view view-title="Rate">
   <ion-content class="padding">
+    <td-cards>
+      <td-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-swipe="cardSwiped($index)">
+        <div style="height:100px; background-color: red">
+        Card content here
+        </div>
+      </td-card>
+    </td-cards>
     <div class="list card">
       <div class="item item-divider">Recent Updates</div>
       <div class="item item-body">
