Facebook login working. Not posting to /users yet.

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,4 +1,18 @@
 <!--
+      The nav bar that will be updated as we navigate between views.
+    -->
+    <ion-nav-bar class="bar-stable">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    <!--
+      The views will be rendered in the <ion-nav-view> directive below
+      Templates are in the /templates folder (but you could also
+      have templates inline in this html file if you'd like).
+    -->
+    <ion-nav-view>
+
+    <!--
 Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
@@ -22,3 +36,5 @@ navigation history that also transitions its views in and out.
 
 
 </ion-tabs>
+
+    </ion-nav-view>
