--- a/www/templates/tab-rate.html
+++ b/www/templates/tab-rate.html
@@ -1,35 +1,44 @@
 <ion-view view-title="Rate">
   <ion-content class="padding">
+
+    <!-- SWIPEABLE -->
     <td-cards>
-      <td-card ng-repeat="card in cards" on-destroy="cardDestroyed($index)" on-swipe="cardSwiped($index)">
-        <div style="height:100px; background-color: red">
-        Card content here
-        </div>
-      </td-card>
+          <td-card ng-repeat="card in cards"  on-destroy="cardDestroyed($index)" on-swipe="cardSwiped($index)">
+            <div class="row card-container">
+              <div class="col">
+                <div class="compare_person">
+                </div>
+              </div>
+              <div class="column">
+                  <!-- spacer -->
+              </div>
+              <div class="col">
+                <div class="compare_person">
+                </div>
+              </div>
+            </div>
+          </td-card>
     </td-cards>
-    <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
-      <div class="item item-body">
-        <div>
-          There is a fire in <b>sector 3</b>
-        </div>
+
+    <!-- CONTROLS -->
+
+    <div class="row" id="controls">
+      <div class="column">
+        <button class="button round rate">
+          <i class="icon ion-thumbsup"></i>
+        </button>        
+      </div>
+      <div class="column">
+        <button class="button round undecided">
+          <i class="icon ion-help"></i>
+        </button>
+      </div>
+      <div class="column">
+        <button class="button round rate">
+          <i class="icon ion-thumbsup"></i>
+        </button>
       </div>
     </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
-      </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
-      </div>
-    </div>
-  </ion-content>
+
+   </ion-content>
 </ion-view>
