--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,9 +1,21 @@
 <ion-view view-title="Account">
   <ion-content>
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
+
+  	<div class="row">
+  		<div class="col">
+  			<div id="account-img"></div>
+  		</div>
+  		<div class="col">
+  			<div class="row">
+  				<h2>Sebastion Stephan</h2>
+  			</div>
+  			<div class="row">
+  				<div class="col"><h3>Rank, over 9000</h3></div>
+  				<div class="col"><h3>Matches: 12</h3></div>
+  				<div class="col"><h3>blubb</h3></div>
+  			</div>
+  		</div>
+  	</div>
+
   </ion-content>
 </ion-view>
