--- a/www/templates/tab-toplists.html
+++ b/www/templates/tab-toplists.html
@@ -1,10 +1,22 @@
-<ion-view view-title="Toplists">
+<ion-view view-title="Best Matches">
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
+      <div class="row">
+        <div class="col">
+          <img ng-src="{{chat.face}}" class="toplist-user">
+          <h2>{{chat.name}}</h2>
+          <p>{{chat.lastText}}</p>
+        </div>
+        <div class="col">
+          
+        </div>
+        <div class="col">
+          <img ng-src="{{chat.face}}" class="toplist-user">
+          <h2>{{chat.name}}</h2>
+          <p>{{chat.lastText}}</p>
+        </div>
+      </div>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
         <ion-option-button class="button-assertive" ng-click="remove(chat)">
