--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,11 +1,17 @@
+<div id="background">
+<div id="overlay">
 
+<div id="claim">
+find somebody as hot as you
+</div>
 
-<label class="item">
-    <button class="button button-block button-positive" ng-click="fbLogin()">
-    Login with Facebook
-    </button>
-</label>
+<button id="btn-login-fb" class="button button-block button-positive" ng-click="fbLogin()">
+Login with Facebook
+</button>
 
-    <button class="button button-block button-positive" ng-click="loginTest()">
-    Test
-    </button>
+<button class="button button-block button-positive" ng-click="loginTest()">
+Test
+</button>
+
+</div>
+</div>
