--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,21 +1,61 @@
 <ion-view view-title="Account">
-  <ion-content>
+<ion-content>
 
-  	<div class="row">
-  		<div class="col">
-  			<div id="account-img"></div>
-  		</div>
-  		<div class="col">
-  			<div class="row">
-  				<h2>Sebastion Stephan</h2>
-  			</div>
-  			<div class="row">
-  				<div class="col"><h3>Rank, over 9000</h3></div>
-  				<div class="col"><h3>Matches: 12</h3></div>
-  				<div class="col"><h3>blubb</h3></div>
-  			</div>
-  		</div>
-  	</div>
+<div class="row">
+	<div class="col">
+		<div id="account-img"></div>
+	</div>
+	<div class="col">
+		<div class="row">
+			<h2>Sebastion Stephan</h2>
+		</div>
+		<div class="row">
+			<div class="col"><h3>Rank, over 9000</h3></div>
+			<div class="col"><h3>Matches: 12</h3></div>
+			<div class="col"><h3>blubb</h3></div>
+		</div>
+	</div>
+</div>
+<div id="suggested-matches">
+	<div class="row suggestion-container">
+		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
+		background-size: cover;
+		background-repeat: no-repeat;'>
+			<button class="button round like">
+				<i class="icon ion-thumbsup"></i>
+			</button>        
+			<button class="button round dislike">
+				<i class="icon ion-thumbsdown"></i>
+			</button>
+		</div>
+	</div>
 
-  </ion-content>
+	<div class="row">
+		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
+		background-size: cover;
+		background-repeat: no-repeat;'>
+		</div>
+	</div>
+	<div class="row">
+		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
+			background-size: cover;
+			background-repeat: no-repeat;'>
+		</div>
+	</div>
+	<div class="row">
+		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
+				background-size: cover;
+				background-repeat: no-repeat;'>
+		</div>
+	</div>
+	<div class="row">
+		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
+					background-size: cover;
+					background-repeat: no-repeat;'>
+		</div>
+	</div>
+			
+</div>
+
+</ion-content>
 </ion-view>
