--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,50 @@
 /* Empty. Add your own CSS if you like */
 
+/*START SCREEN*/
+
+#background{
+	width: 100%;
+	height: 100%;
+	background-image: url("http://www.karenrauchcarter.com/wp-content/uploads/2012/01/happy-couple.jpg");
+  	background-size: cover;
+}
+
+#overlay{
+	width: 100%;
+	height: 100%;
+	  content: " ";
+  z-index: 10;
+  display: block;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  /*background: rgba(0, 0, 0, 0.5);*/
+  background: linear-gradient(to bottom, rgba(125,126,125, 0.5) 0%,rgba(14,14,14, 0.8) 100%);
+}
+
+#btn-login-fb{
+	background-color: #3D94D0;
+	color: #D3D3D3;
+	line-height: 1.5;
+	border: none;
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	position: absolute;
+	bottom: 50px;
+	left: 100px;
+}
+
+#claim{
+	position: absolute;
+	bottom: 250px;
+	left: 60px;
+	font-size: 1.5em;
+	font-weight: 900;
+	color: #D3D3D3;
+}
 
 /*COMPARISONS*/
 
@@ -64,4 +109,31 @@ img.toplist-user{
 	background-image: url("http://img1.rnkr-static.com/list_img/3169/2143169/C300/the-most-outrageous-donald-trump-moments.jpg");
   	background-size: cover;
     background-repeat: no-repeat;
+}
+
+div.suggested-match{
+	height: 200px;
+	width: 200px;
+	border-radius: 50%;
+	position: relative;
+	display: block;
+	margin-left: auto;
+  	margin-right: auto;
+}
+
+
+button.like {
+	width: 70px;
+	height: 70px;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+}
+
+button.dislike {
+	width: 70px;
+	height: 70px;
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
 }
