--- a/www/css/style.css
+++ b/www/css/style.css
@@ -49,11 +49,25 @@
 /*COMPARISONS*/
 
 div.compare_person {
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
+  height: 200px;
+  width: 100%;
   background-image: url("http://selfieyo.com/wp-content/uploads/2015/03/selfiegood1.jpg");
-  background-size: 100px 100px;
+  background-size: cover;
+}
+
+.person_info {
+    background-color: #f47921;
+    width: 100%;
+    height: 40px;
+    box-shadow: rgba(0,0,0,0.5) 15px 0px 17px;
+
+    color: #fff;
+    font-weight: bold;
+    padding: 10px;
+}
+
+.td-card .row, .td-card .col {
+	padding: 0px;
 }
 
 button.round {
@@ -79,13 +93,14 @@ button.undecided {
 td-card{
 	background-color: white;
 	width: 400px;
-	height: 200px;
+	height: 240px;
 	border: 1px solid #999;
     box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
     border-radius: 6px;
     position: absolute;
 	top: 10px;
 	left: 10px;
+	overflow: hidden;
 }
 
 #controls{
