--- a/www/templates/tab-rate.html
+++ b/www/templates/tab-rate.html
@@ -1,21 +1,25 @@
 <ion-view view-title="Rate">
-  <ion-content class="padding">
+  <ion-content>
     <!-- SWIPEABLE -->
     <div ng-if="comparisons.length == 0">
       There are currently no couples for you to rate.
     </div>
     <td-cards>
-      <td-card ng-repeat="comparison in comparisons" on-destroy="cardDestroyed($index)" on-swipe-left="cardSwipedLeft($index)" on-swipe-right="cardSwipedRight($index)" on-partial-swipe="cardPartialSwipe(amt)">
+      <td-card ng-repeat="comparison in comparisons track by $index" ng-style="{'z-index': 50-$index}" on-destroy="cardDestroyed($index)" on-swipe-left="cardSwipedLeft($index)" on-swipe-right="cardSwipedRight($index)" on-partial-swipe="cardPartialSwipe(amt)">
             <div class="row card-container">
               <div class="col">
-                <div class="compare_person">
+                <div class="compare_person" ng-style="{'background-image': comparison.male.profilePic}"></div>
+                <div class="person_info">
+                  {{comparison.male.name}}
                 </div>
               </div>
               <div class="column">
                   <!-- spacer -->
               </div>
               <div class="col">
-                <div class="compare_person">
+                <div class="compare_person"></div>
+                <div class="person_info">
+                  {{comparison.female.name}}
                 </div>
               </div>
             </div>
@@ -26,17 +30,17 @@
 
     <div class="row" id="controls">
       <div class="column">
-        <button class="button round rate">
+        <button class="button round rate" ng-click="cardSwipedLeft(0)">
           <i class="icon ion-thumbsup"></i>
         </button>        
       </div>
       <div class="column">
-        <button class="button round undecided">
+        <button class="button round undecided" ng-click="cardEqual(0)">
           <i class="icon ion-help"></i>
         </button>
       </div>
       <div class="column">
-        <button class="button round rate">
+        <button class="button round rate" ng-click="cardSwipedRight(0)">
           <i class="icon ion-thumbsup"></i>
         </button>
       </div>
