--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,16 @@
 /* Empty. Add your own CSS if you like */
 
+/* OVERALL STYLING */
+ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-color-active-positive .tab-item.active, ion-tabs.tabs-color-active-positive .tab-item.activated {
+	color: #f47921;
+}
+
+.empty_message {
+	padding: 20px;
+	text-align: center;
+	font-size: 20px;
+}
+
 /*START SCREEN*/
 
 #background{
@@ -48,10 +59,13 @@
 
 /*COMPARISONS*/
 
+td-cards {
+	margin-top: 10px;
+}
+
 div.compare_person {
   height: 200px;
   width: 100%;
-  background-image: url("http://selfieyo.com/wp-content/uploads/2015/03/selfiegood1.jpg");
   background-size: cover;
 }
 
@@ -70,29 +84,42 @@ div.compare_person {
 	padding: 0px;
 }
 
+td-card.card-0 {
+  -webkit-transform: translate3d(0, 0px, 0);
+  transform: translate3d(0, 0px, 0);
+  top: 0px;
+}
+td-card.card-1 {
+  -webkit-transform: translate3d(0, 4px, -4px);
+  transform: translate3d(0, 4px, -4px);
+}
+td-card.card-2 {
+  -webkit-transform: translate3d(0, 8px, -8px);
+  transform: translate3d(0, 8px, -8px);
+}
+
 button.round {
 	border-radius: 50%;
 }
 
 button.rate {
-	width: 70px;
-	height: 70px;
+	width: 120px;
+	height: 120px;
     /*position: absolute;*/
     /*bottom: -25px;*/
     /*right: 0;*/
 }
 
 button.undecided {
-	width: 50px;
-	height: 50px;
+	width: 85px;
+	height: 85px;
     /*position: absolute;*/
     /*bottom: -25px;*/
     /*right: 0;*/
 }
 
-td-card{
+td-card {
 	background-color: white;
-	width: 400px;
 	height: 240px;
 	border: 1px solid #999;
     box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
@@ -100,12 +127,21 @@ td-card{
     position: absolute;
 	top: 10px;
 	left: 10px;
+	right: 10px;
 	overflow: hidden;
 }
 
 #controls{
 	position: absolute;
-	top:250px;
+	top: 280px;
+}
+
+#controls > div {
+	margin: 0 auto;
+}
+
+#controls .button .icon:before {
+	font-size: 50px;
 }
 
 /* TOPLIST */
