--- a/www/css/style.css
+++ b/www/css/style.css
@@ -157,7 +157,6 @@ img.toplist-user{
 	width: 200px;
 	height: 200px;
 	border-radius: 50%;
-	background-image: url("http://img1.rnkr-static.com/list_img/3169/2143169/C300/the-most-outrageous-donald-trump-moments.jpg");
   	background-size: cover;
     background-repeat: no-repeat;
 }
@@ -170,6 +169,9 @@ div.suggested-match{
 	display: block;
 	margin-left: auto;
   	margin-right: auto;
+
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 
