Wire up toplist view

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,26 +1,24 @@
-<ion-view view-title="Account">
+<ion-view view-title="{{user.name}}">
 <ion-content>
 
 <div class="row">
 	<div class="col">
-		<div id="account-img"></div>
+		<div id="account-img" ng-style="{'background-image': 'url(' + user.profilePic + ')'}"></div>
 	</div>
 	<div class="col">
 		<div class="row">
-			<h2>Sebastion Stephan</h2>
+			<h2>{{$scope.user}}</h2>
 		</div>
 		<div class="row">
-			<div class="col"><h3>Rank, over 9000</h3></div>
+			<div class="col"><h3>Rank: {{user.sigma}}</h3></div>
 			<div class="col"><h3>Matches: 12</h3></div>
-			<div class="col"><h3>blubb</h3></div>
+			<div class="col"><h3></h3></div>
 		</div>
 	</div>
 </div>
 <div id="suggested-matches">
-	<div class="row suggestion-container">
-		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
-		background-size: cover;
-		background-repeat: no-repeat;'>
+	<div class="row" ng-repeat="match in matches">
+		<div class="suggested-match" ng-style="{'background-image': 'url(' + match.profilePic + ')'}">
 			<button class="button round like">
 				<i class="icon ion-thumbsup"></i>
 			</button>        
@@ -28,33 +26,7 @@
 				<i class="icon ion-thumbsdown"></i>
 			</button>
 		</div>
-	</div>
-
-	<div class="row">
-		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
-		background-size: cover;
-		background-repeat: no-repeat;'>
-		</div>
-	</div>
-	<div class="row">
-		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
-			background-size: cover;
-			background-repeat: no-repeat;'>
-		</div>
-	</div>
-	<div class="row">
-		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
-				background-size: cover;
-				background-repeat: no-repeat;'>
-		</div>
-	</div>
-	<div class="row">
-		<div class="suggested-match" style='background-image: url("https://www-media.fanlala.com/sites/default/files/content/03/23/14/lea-michele-sunday-tweet.jpg");
-					background-size: cover;
-					background-repeat: no-repeat;'>
-		</div>
-	</div>
-			
+	</div>	
 </div>
 
 </ion-content>
