--- a/www/templates/tab-toplists.html
+++ b/www/templates/tab-toplists.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Best Matches">
   <ion-content>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="couple in couples" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
       <div class="row">
         <div class="col">
           <img ng-src="{{chat.face}}" class="toplist-user">
