--- a/www/templates/tab-toplists.html
+++ b/www/templates/tab-toplists.html
@@ -4,17 +4,17 @@
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="couple in couples" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
       <div class="row">
         <div class="col">
-          <img ng-src="{{chat.face}}" class="toplist-user">
-          <h2>{{chat.name}}</h2>
-          <p>{{chat.lastText}}</p>
+          <img ng-src="{{couple.male.profilePic}}" class="toplist-user">
+          <h2>{{couple.male.name}}</h2>
+          <p>{{couple.lastText}}</p>
         </div>
         <div class="col">
           
         </div>
         <div class="col">
-          <img ng-src="{{chat.face}}" class="toplist-user">
-          <h2>{{chat.name}}</h2>
-          <p>{{chat.lastText}}</p>
+          <img ng-src="{{couple.female.profilePic}}" class="toplist-user">
+          <h2>{{couple.female.name}}</h2>
+          <p>{{couple.lastText}}</p>
         </div>
       </div>
         <i class="icon ion-chevron-right icon-accessory"></i>
