Style adjustments for login screen

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,15 +2,11 @@
 <div id="overlay">
 
 <div id="claim">
-find somebody as hot as you
+Find somebody as hot as you.
 </div>
 
 <button id="btn-login-fb" class="button button-block button-positive" ng-click="fbLogin()">
 Login with Facebook
-</button>
-
-<button class="button button-block button-positive" ng-click="loginTest()">
-Test
 </button>
 
 </div>
