--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,14 +13,14 @@ ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-col
 
 /*START SCREEN*/
 
-#background{
+#background {
 	width: 100%;
 	height: 100%;
 	background-image: url("http://www.karenrauchcarter.com/wp-content/uploads/2012/01/happy-couple.jpg");
   	background-size: cover;
 }
 
-#overlay{
+#overlay {
 	width: 100%;
 	height: 100%;
 	  content: " ";
@@ -35,20 +35,26 @@ ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-col
   background: linear-gradient(to bottom, rgba(125,126,125, 0.5) 0%,rgba(14,14,14, 0.8) 100%);
 }
 
-#btn-login-fb{
-	background-color: #3D94D0;
-	color: #D3D3D3;
+#btn-login-fb {
+	color: #fff;
+    background-color: #3b5998;
+    border-color: rgba(0,0,0,0.2);
 	line-height: 1.5;
+	font-family: "Lucida Grande", Tahoma;
+	font-size: 20px;
+	font-weight: bold;
 	border: none;
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
+	width: 300px;
+	height: 20px;
+	border-radius: 5px;
+	
 	position: absolute;
 	bottom: 50px;
-	left: 100px;
+	left: 50%;
+	margin-left: -150px;
 }
 
-#claim{
+#claim {
 	position: absolute;
 	bottom: 250px;
 	left: 60px;
