--- a/www/css/style.css
+++ b/www/css/style.css
@@ -63,7 +63,8 @@ ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-col
 #claim {
 	position: absolute;
 	bottom: 250px;
-	left: 60px;
+    width: 100%;
+    text-align: center;
 	font-size: 1.5em;
 	font-weight: 900;
 	color: #D3D3D3;
