--- a/www/templates/tab-rate.html
+++ b/www/templates/tab-rate.html
@@ -31,17 +31,17 @@
     <div class="row" id="controls" ng-if="comparisons.length > 0">
       <div>
         <button class="button round rate" ng-click="swipeLeft()">
-          <i class="icon ion-thumbsup"></i>
+          <i class="icon ion-male"></i>
         </button>        
       
       
         <button class="button round undecided" ng-click="cardEqual(0)">
-          <i class="icon ion-help"></i>
+          <i class="icon ion-arrow-swap"></i>
         </button>
       
       
         <button class="button round rate" ng-click="swipeRight()">
-          <i class="icon ion-thumbsup"></i>
+          <i class="icon ion-female"></i>
         </button>
       </div>
     </div>
