--- a/www/templates/tab-rate.html
+++ b/www/templates/tab-rate.html
@@ -1,4 +1,4 @@
-<ion-view view-title="<img src='img/logo.png' class='navbar_logo'>">
+<ion-view view-title="<img src='img/logo_white.png' class='navbar_logo'>">
   <ion-content>
     <!-- SWIPEABLE -->
     <div class="empty_message" ng-if="comparisons.length == 0">
