--- a/www/templates/tab-toplists.html
+++ b/www/templates/tab-toplists.html
@@ -1,4 +1,4 @@
-<ion-view view-title="<img src='img/logo.png' class='navbar_logo'>">
+<ion-view view-title="<img src='img/logo_white.png' class='navbar_logo'>">
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="couple in couples" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
