Slight style improvement

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -33,7 +33,7 @@ ion-tabs.tabs-color-active-positive .tab-item {
 
 .dividerbar {
 	border-top: 1px solid #ddd;
-	/* border-bottom: 1px solid #ddd; */
+	border-bottom: 1px solid #eee;
 	width: 100%;
 	background-color: #f8f8f8
 }
