--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,7 +1,7 @@
 <ion-view view-title="{{user.name}}">
 <ion-content>
 
-<div class="row" style="border-bottom: 1px solid #ddd; width: 100%;">
+<div class="row">
 	<div class="col">
 		<div id="account-img" ng-style="{'background-image': 'url(' + user.profilePic + ')'}"></div>
 	</div>
