--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,17 +6,17 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Rate" icon-off="ion-thumbsup" icon-on="ion-thumbsup" href="#/tab/rate">
+  <ion-tab title="Rate" icon-off="fa fa-star-half-o" icon-on="fa fa-star-half-o" href="#/tab/rate">
     <ion-nav-view name="tab-rate"></ion-nav-view>
   </ion-tab>
 
   <!-- Chats Tab -->
-  <ion-tab title="Toplists" icon-off="ion-ios-star-outline" icon-on="ion-ios-star" href="#/tab/toplists">
+  <ion-tab title="Toplists" icon-off="fa fa-list-ol" icon-on="fa fa-list-ol" href="#/tab/toplists">
     <ion-nav-view name="tab-toplists"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Me" icon-off="ion-person" icon-on="ion-person" href="#/tab/account">
+  <ion-tab title="Me" icon-off="fa fa-user" icon-on="fa fa-user" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
