New welcome view

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,13 +1,21 @@
-<div id="background">
-<div id="overlay">
+<div>
+	<div id="welcome_logo"><img src="img/logo.png"></div>
+	<div id="claim">
+		Let our community find the person of the opposite sex that is exactly as hot as you.
+	</div>
 
-<div id="claim">
-Find somebody as hot as you.
-</div>
+	<div style="background-image: url(img/Android3.jpg);
+    width: 100%;
+    height: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: absolute;
+    bottom: 120px">
+	</div>
 
-<button id="btn-login-fb" class="button button-block button-positive" ng-click="fbLogin()">
-Login with Facebook
-</button>
-
-</div>
+	<button id="btn-login-fb" class="button button-block button-positive" ng-click="fbLogin()">
+		<i class="fa fa-facebook-official"></i>
+		Login with Facebook
+	</button>
 </div>
