Center user images

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -106,6 +106,7 @@ div.compare_person {
   height: 200px;
   width: 100%;
   background-size: cover;
+  background-position: center center;
 }
 
 .person_info {
