--- a/www/css/style.css
+++ b/www/css/style.css
@@ -242,7 +242,20 @@ span.top-score{
 	border-radius: 50%;
 	background-size: cover;
     background-repeat: no-repeat;
+    margin-left: 5px;
     margin-bottom: 5px;
+}
+
+.account-score{
+	color:#34373b;
+	font-size: 30px;
+	padding-top:20px;
+	margin-bottom: 0px;
+	font-weight: 600;
+}
+
+span.description{
+	font-size: 16px;
 }
 
 div.suggested-match {
