--- a/www/templates/tab-toplists.html
+++ b/www/templates/tab-toplists.html
@@ -17,7 +17,7 @@
           <p>{{couple.lastText}}</p>
         </div>
         <div class="col col-center text-center">
-        <span class="top-score">{{Math.round((couple.male.hotness + ((Math.random() * 20)/100) * (Math.random() < 0.5 ? -1 : 1))  *10) / 10}}</span>
+        <span class="top-score">{{couple.female.hotness}}</span>
         </div>
       </div>
 
